OpenVi 7.5.28 -> OpenVi 7.5.29-dev: Mon May 20 07:56:10 2024
        + Show version command output even in ex silent mode
        + Consistently use .Dq for double-quoting in man pages
        + Fix various spelling errors and typos, mostly in comments
        + Increase buf size

OpenVi 7.4.27 -> OpenVi 7.5.28: Sun Apr 7 19:06:02 2024
        + Add `-C cmd` startup option; similar to `-c` but always runs `cmd`
        + Remove duplicate include statements from xinstall.c
        + Add showfilename set option to display file name; OK millert@ otto@
        + Avoid use after free of frp and frp->tname; found by smatch,
          ok miod@ millert@
        + fix fd leaks in error paths; ok miod@

OpenVi 7.4.26 -> OpenVi 7.4.27: Wed Nov 22 19:30:41 2023
        + Update README file with additional links and packaging information
        + Always suppress db_err output when !lno; closes GitHub Issue #34
        + Update minpwcache.c to OpenBSD pwcache.c v1.16; contains spelling
          fixes from Paul Tagliamonte; only comments, no user-facing change
        + Use openbsd_strlcpy for strlcpy in ptym_open(); fixes compilation
          on AIX and some other System V-derived systems

OpenVi 7.4.25 -> OpenVi 7.4.26: Fri Oct 28 00:15:39 2023
        + Add a fallback path for `altnotation` mode; fixes a crash on macOS
        + Bump MAX_CHARACTER_COLUMNS to 6 for future usage
        + Eliminate strcpy usage in ptym_open function

OpenVi 7.4.24 -> OpenVi 7.4.25: Fri Oct 27 11:44:45 2023
        + Add a new option, `altnotation` (abbreviation `an`), inspired
          by the Nvi2 2.2.1 option of the same name; if set, most control
          characters less than 0x20 will be displayed in <C-char> notation,
          and carriage feed, escape, and delete will be displayed as <Ret>,
          <Esc>, and <Del>, respectively

OpenVi 7.4.23 -> OpenVi 7.4.24: Tue Oct 10 19:47:07 2023
        + Silence a warning when building with recent Clang compilers